welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program: error: not found: value move
		move(getY(),getDirection() == Direction.NORTH); 
                ^Program:2: error: not found: value move
move(getY(): Int,versLAvant: Boolean){
^Program:2: error: not found: value versLAvant
move(getY(): Int,versLAvant: Boolean){
                 ^Program:5: error: not found: value versLAvent
  	if (versLAvent==true){
            ^