welcome.lessons.welcome.methods.args.MethodsArgs.scala.code
move(getY(): Int,versLAvant: Boolean){

  
  	if (versLAvent==true){
  		for(pas<- 1 to getY()){avance()} 
    }else{
    	 for(pas<- 1 to getY()){recule()} 
    
  }
}